public/css/common.css
/* ... */
/**
		* Nestable Extras
		*/
.nestable-lists {
    display: block;
    clear: both;
    width: 100%;
    border: 0;
}

#nestable-menu {
    padding: 0;
    margin: 20px 0;
}

@media only screen and (min-width: 700px) {
    .dd {
        float: left;
        width: 100%;
    }

    .dd+.dd {
        margin-left: 2%;
    }
}

.dd-hover>.dd-handle {
    background: #2ea8e5 !important;
}

/**
		* Nestable Draggable Handles
		*/
.dd3-content {
    display: block;
    height: 30px;
    margin: 5px 0;
    padding: 5px 10px 5px 40px;
    color: #333;
    text-decoration: none;
    font-weight: bold;
    border: 1px solid #ccc;
    background: #fafafa;
    background: -webkit-linear-gradient(top, #fafafa 0%, #eee 100%);
    background: -moz-linear-gradient(top, #fafafa 0%, #eee 100%);
    background: linear-gradient(top, #fafafa 0%, #eee 100%);
    -webkit-border-radius: 3px;
    border-radius: 3px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}

.dd3-content:hover {
    color: #2ea8e5;
    background: #fff;
}

.dd-dragel>.dd3-item>.dd3-content {
    margin: 0;
}

.dd3-item>button {
    margin-left: 30px;
}

.dd3-handle {
    position: absolute;
    margin: 0;
    left: 0;
    top: 0;
    cursor: pointer;
    width: 30px;
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
    border: 1px solid #aaa;
    background: #ddd;
    background: -webkit-linear-gradient(top, #ddd 0%, #bbb 100%);
    background: -moz-linear-gradient(top, #ddd 0%, #bbb 100%);
    background: linear-gradient(top, #ddd 0%, #bbb 100%);
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.dd3-handle:before {
    content: '≡';
    display: block;
    position: absolute;
    left: 0;
    top: 3px;
    width: 100%;
    text-align: center;
    text-indent: 0;
    color: #fff;
    font-size: 20px;
    font-weight: normal;
}

.dd3-handle:hover {
    background: #ddd;
}

#group_reorder_Modal p {
    line-height: 1.5em;
}

#group_reorder_Modal .small {
    color: #666;
    font-size: 0.875em;
}

#group_reorder_Modal .large {
    font-size: 1.25em;
}

#estimation-edit-table td.nested-table {
    padding-left: 20px !important;
}


/* body table thead th, body table thead th * {
    font-size: 12px !important;
    color: #333 !important;
    text-transform: uppercase !important;
    font-weight: 700;
    padding: 10px 5px !important;
} */



.col-xl-3 {
    width: 15%;
    padding: 0;
    margin: 0;
}

.col-xl-9 {
    flex: 0 0 auto;
    width: 85%;
}


.fix_badges {
    min-width: unset !important;
}

.img-thumbnail {
    padding: 0 !important;
    border-radius: 0;
}

td .btn-sm i {
    color: #333 !important;
}

.table td,
.table td * {
    text-wrap: wrap !important;
    white-space: normal;
}


/********** CRM CUSTOM CSS *********/


td.totalnr {
    width: 205px !important;
}



.mediainfo .actionbuttons {
    position: absolute;
    margin-top: -27px;
    display: flex !important;
}

.mediainfo .action-btn {
    width: 20px;
    height: 20px;
    border-radius: 4px;
    color: #fff;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    flex-shrink: 0;
}

.actionbuttons .action-btn {
    width: 20px;
    height: 20px;
    border-radius: 2px;
    color: #fff;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    flex-shrink: 0;
}

.mediabox {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    /* Elemente links ausrichten */
    align-content: flex-start;
    /* Für mehrere Zeilen */
}

.mediabox .mediaimg {
    flex: 0 1 calc(100%/5);
    box-sizing: border-box;
    width: 20%;
    padding: 5px;
}

.mediabox .media a {
    margin-left: 0;
    /* border: 1px solid #FFF; */
    height: auto;
    object-fit: cover;
    /* overflow: hidden; */
    width: 100%;
}

.mediabox .media img {
    margin-left: 0;
    border: 1px solid #FFF;
    object-fit: cover;
    overflow: hidden;
    border-radius: 5px;
    height: 130px;
    width: 100%;
    border: 2px solid #ececec;
}

.mediabox .mediainfo {
    padding: 12px 5px 0;
    font-size: 10px !important;
    line-break: anywhere;
    line-height: 12px;
}

span.filedate {
    background: #f5f5f5;
    padding: 0 2px;
    display: inline-block;
    border-radius: 5px;
    font-size: 10px;
    /* border-top: 1px solid #f00; */
}

.actionbuttons {
    text-align: left !important;
    margin-top: -30px;
    position: relative;
    z-index: 9;
    /* visibility: hidden; */
    display: flex;
    width: 100%;
    justify-content: left;
    padding-left: 7px;
}

.actionbuttons .hide {
    visibility: hidden;
}

.mediaimg:hover .actionbuttons .hide {
    visibility: visible;
}

.mediainfo span {
    display: block;
}

a.btn:hover {
    opacity: 0.7;
}


/* .card .progress {
	height: 15px;
	} */
.progress-card h6 {
    margin-bottom: 0
}

img.staffm {
    border-radius: 5px;
}

textarea#description {
    /* min-height: 300px; */
    height: auto;
    ;
}

.media-body.titledetails,
.media-body.titledetails * {
    line-height: 12px;
    font-size: 11px !important;
    display: block;
    font-weight: 400;
}

.project-title {
    font-size: 14px;
}

.project-title a.project-title {
    font-size: 14px !important;
    line-height: 15px !important;
    display: inline-block;
    margin-bottom: 4px !important;
    padding-bottom: 4px;
    width: 100%;
}

.card:not(.table-card) .table-responsive {
    margin: 0;
    width: 100%;
}

span.badge {
    text-align: left;
    border-radius: 6px !important;
}




.custom-thumbnail {
    position: relative;
    width: 100%;
    height: 150px;
    background-size: cover;
    background-position: center;
}

.fullsize-link {
    display: block;
    width: 100%;
    height: 100%;
    background-color: transparent;
    position: absolute;
    top: 0;
    left: 0;
}

td.project-thumbnail.custom-thumbnail {
    height: 50px !important;
}


.pastel-green {
    background-color: #5fa85f;
}
/* ... */

